k3s/monitoring/01-grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: traefik
  tls:
    - secretName: grafana-tls
      hosts:
        - grafana.silvus.me
  rules:
    - host: grafana.silvus.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
